# bitstream

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  bitstreamConfig.cmake
header/: bitstream.hpp
include/: basestream.hpp  bitbase.hpp  bitstream.hpp  netstream.hpp
src/: CMakeLists.txt  basestream.cpp  bitstream.cpp  netstream.cpp
test/: CMakeLists.txt  client.cpp  server.cpp  test.cpp
