CMAKE_MINIMUM_REQUIRED(VERSION 3.2)

PROJECT(bitstream)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

SET(EXECUTABLE_OUTPUT_PATH ${CMAKE_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)

SET(BITSTREAM_LIBRARIES bitstream CACHE INTERNAL "")
SET(BITSTREAM_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include CACHE INTERNAL "")

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)