CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
PROJECT(bitstream)

SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)

ADD_SUBDIRECTORY(Tiny-server)

SET(BITSTREAM_LIBRARIES bitstream CACHE INTERNAL "")
SET(BITSTREAM_INCLUDE_DIRS 
	${SERVER_INCLUDE_DIRS}
	${CMAKE_CURRENT_SOURCE_DIR}/include
	${CMAKE_CURRENT_SOURCE_DIR}/json/src
CACHE INTERNAL "")
MESSAGE(STATUS "BITSTREAM_INCLUDE_DIRS:${BITSTREAM_INCLUDE_DIRS}")

INCLUDE_DIRECTORIES(${BITSTREAM_INCLUDE_DIRS})
ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)