INCLUDE_DIRECTORIES(${BITSTREAM_INCLUDE_DIRS})
ADD_LIBRARY(${BITSTREAM_LIBRARIES} basestream.cpp bitstream.cpp netstream.cpp)
TARGET_LINK_LIBRARIES(${BITSTREAM_LIBRARIES} ${SERVER_LIBRARIES})

IF(${CMAKE_BUILD_TYPE} MATCHES "release")
	SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-O2")
ELSE()
	SET(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-Wall -W -Wextra -O0 -ggdb3")
ENDIF()