INCLUDE_DIRECTORIES(${BITSTREAM_INCLUDE_DIRS})
ADD_EXECUTABLE(BITtests test.cpp)
TARGET_LINK_LIBRARIES(BITtests ${BITSTREAM_LIBRARIES})
ADD_EXECUTABLE(BITserver server.cpp)
TARGET_LINK_LIBRARIES(BITserver ${BITSTREAM_LIBRARIES} "pthread")
ADD_EXECUTABLE(BITclient client.cpp)
TARGET_LINK_LIBRARIES(BITclient ${BITSTREAM_LIBRARIES})

